--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
         </ul>
       </div>
     </nav>
-    <div class="page-up">
-      <a href="#">
-        <i class="fa-solid fa-angle-up"></i>
-      </a>
-    </div>
   </header>
   <!-- //헤더 -->
   
@@ -69,16 +64,28 @@
   <div class="main-top-wrap swiper">
     <div class="visual swiper-wrapper">
       <div class="swiper-slide">
-        <p></p>
+        <div class="slide_txt_">
+          <b>best</b>
+          <h2>피부,<br>그 이상의 가치</h2>
+          <p>비건 화장품 공식 인증</p>
+        </div>
         <img src="img/main-bg02.png" alt="">
       </div>
       <div class="swiper-slide">
-        <p></p>
+        <div class="slide_txt">
+          <b>best</b>
+          <h2>자극없는 수분감,<br>더 탄탄한 피부</h2>
+          <p>끈적임 없는 청량함으로<br>하루종일 부드러운 피부</p>
+        </div>
         <img src="img/main-bg05.jpg" alt="">
       </div>
       <div class="swiper-slide">
-        <p></p>
-        <img src="img/main-bg04.jpg" alt="">
+        <div class="slide_txt">
+          <b>best</b>
+          <h2>각질 없는 입술,<br>끈적임없는 촉촉함</h2>
+          <p>자극없는 식물속성으로<br>부드러운 발림성</p>
+        </div>
+        <img src="img/main-bg06.jpg" alt="">
       </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -93,7 +100,7 @@
       <div class="txt_box sec01_txt">
         <h2>Vegan<br>Beauty</h2>
         <p>
-          Lorem ipsum dolor sit amet<br> consectetur adipisicing elit.<br> Quod, numquam consectetur eveniet<br> iure at sunt, rerum quia enim
+          어바웃미는 가치 있는 뷰티 라이프를 위해 끊임없이 노력합니다.<br><br>삶의 바탕이 되는 자연 소재 속 유기한 성분을 깨끗하게 담은<br>어바웃미의 비건 인증 제품들을 만나보세요.
         </p>
         <a href="#">더 알아보기</a>
       </div>
@@ -110,7 +117,7 @@
         <div class="txt_box sec02_txt">
           <h2>Product<br>List</h2>
           <p>
-            Lorem ipsum dolor sit amet<br> consectetur adipisicing elit.<br> Quod, numquam consectetur eveniet<br> iure at sunt, rerum quia enim
+            복잡한 일상 속, 기본으로 돌아가야할때.<br><br>나에게 중요한 것, 내가 원하는 것에 집중하는 시간 속<br>우리는 비로소 '나다운 나'를 발견합니다.
           </p>
           <a href="#">더 알아보기</a>
         </div>
@@ -133,50 +140,59 @@
       <div class="rv_wrap swiper-wrapper">
         <div class="rv_box swiper-slide">
           <a href="#">
-            <img src="img/6631b9a3ec3cfb9b865ee29afa0e5bb8_74726.png" alt="">
+            <img src="img/rv01.jpg" alt="">
             <div class="rv_txt">
-              <h4></h4>
-              <p></p>
+              <h4>재구매해요~</h4>
+              <p>클렌징하고 건조하거나 땡기는 것도 없고 클렌징도 잘되거 좋아요!</p>
             </div>
           </a>
         </div>
         <div class="rv_box swiper-slide">
           <a href="#">
-            <img src="" alt="">
+            <img src="img/rv02.jpg" alt="">
             <div class="rv_txt">
-              <h4></h4>
-              <p></p>
+              <h4>3번째 구매입니다.</h4>
+              <p>이번에 이 제품으로 바꿔봤는데 보습 효과도 좋고 용량도 많아서 좋아요</p>
             </div>
           </a>
         </div>
         <div class="rv_box swiper-slide">
           <a href="#">
-            <img src="" alt="">
+            <img src="img/rv03.jpg" alt="">
             <div class="rv_txt">
-              <h4></h4>
-              <p></p>
+              <h4>여행 필수품!</h4>
+              <p>여행갈때 필요해서 구매하게되었습니다 성분도 착하고 배송도 빠르고 수분크림 3통째 사용하고있어요 잘쓰겠습니다!!</p>
             </div>
           </a>
         </div>
         <div class="rv_box swiper-slide">
           <a href="#">
-            <img src="" alt="">
+            <img src="img/rv04.jpg" alt="">
             <div class="rv_txt">
-              <h4></h4>
-              <p></p>
+              <h4>예민성 피부에도 좋아요</h4>
+              <p>제품이 순하고 바르자마자 쿨링효과 있어서 진정도 됩니다</p>
             </div>
           </a>
         </div>
         <div class="rv_box swiper-slide">
           <a href="#">
-            <img src="" alt="">
+            <img src="img/rv05.jpg" alt="">
             <div class="rv_txt">
-              <h4></h4>
-              <p></p>
+              <h4>계속 구매 예정입니다</h4>
+              <p>만족하며 사용하던 제품인데, 대용량 으로 출시했네요 바로 주문했습니딘</p>
             </div>
           </a>
         </div>
-        
+        <div class="rv_box swiper-slide">
+          <a href="#">
+            <img src="img/rv06.jpg" alt="">
+            <div class="rv_txt">
+              <h4>인생템 찾았어요!</h4>
+              <p>겨울이라 피부가 너무 건조해져서 유수분 밸런스를 맞춰줄 스킨 찾다가 구매해봤어오
+                촉촉하니 좋네요!</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -185,7 +201,7 @@
   <!-- 푸터 -->
   <footer>
     <h4>
-      <img src="./img/어바웃미로고150.png" alt="">
+      <img src="img/logo150.png" alt="">
     </h4>
     <div class="footer1">
       <p>
@@ -209,6 +225,11 @@
         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
       </ul>
+    </div>
+    <div class="page-up">
+      <a href="#">
+        <i class="fa-solid fa-angle-up"></i>
+      </a>
     </div>
   </footer>
 </body>
