--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
    <header class="header">
     <div class="gnb-line"></div>
     <nav class="gnb">
-      <h1><a href="#"><img src="img/logo150.png" alt=""></a></h1>
+      <h1><a href="index.html"><img src="img/logo150.png" alt=""></a></h1>
       <ul class="depth1">
         <li>
-          <a href="#">Brand</a>
+          <a href="brand.html">Brand</a>
           <ul class="depth2">
             <li>브랜드 스토리</li>
             <li>뉴스</li>
